force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/Thread_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Thread Settings</label>
</CustomObject>