force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/fields/Enable_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Enable_Recovery__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Recovery</label>
    <type>Checkbox</type>
</CustomField>