force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/fields/Max_Threads__c.field-meta.xml
<CustomField>
    <fullName>Max_Threads__c</fullName>
    <label>Max Threads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>