force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/fields/Recovery_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Batch_Size__c</fullName>
    <label>Recovery Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>