force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/fields/Recovery_Limit_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Limit_Threshold_Pct__c</fullName>
    <label>Recovery Limit Threshold Pct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>