force-app/bedrock/lib/thread-service/objects/Thread_Settings__c/fields/Recovery_Threshold_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Threshold_Minutes__c</fullName>
    <label>Recovery Threshold Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>